testing if we are getting angular okay

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
   <head>
-    <title>Hello World!</title>
+    <title>STL Viewer</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
+
+    <input type="text" ng-model="sometext" />
+    <h1>Hello {{ sometext }}</h1>
+
+    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
   </body>
 </html>
