--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="stlApp">
   <head>
     <title>STL Viewer</title>
   </head>
   <body>
 
-    <input type="text" ng-model="sometext" />
-    <h1>Hello {{ sometext }}</h1>
+    <div ng-controller="TestController">
+      <input type="text" ng-model="sometext" />
+      <h1>{{ str }} {{ sometext }}</h1>
+    </div>
 
     <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+
+    <script type="text/javascript" src="app/app.js"></script>
   </body>
 </html>
