creating a controller folder and adding a main controller

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <div ng-controller="TestController">
+    <div ng-controller="MainCtrl">
       <input type="text" ng-model="sometext" />
       <h1>{{ str }} {{ sometext }}</h1>
     </div>
@@ -13,5 +13,6 @@
     <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
     <script type="text/javascript" src="app/app.js"></script>
+    <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
   </body>
 </html>
