adding a css file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="stlApp">
   <head>
     <title>STL Viewer</title>
+
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
 
