adding a canvas and a canvas controller

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/canvasCtrl.js"></script>
   </body>
 </html>
