--- a/app/controllers/mainCtrl.html
+++ b/app/controllers/mainCtrl.html
@@ -1,3 +1,3 @@
 
-<input type="text" ng-model="sometext" />
-<h1>{{ str }} {{ sometext }}</h1>
+<div ng-controller="CanvasCtrl" ng-include="'app/controllers/canvasCtrl.html'">
+</div>
