--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/canvasCtrl.js"></script>
+    <script type="text/javascript" src="app/services/renderer.js"></script>
   </body>
 </html>
