including the datastream and stl reader scripts in the index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
     <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
+    <script type="text/javascript" src="other_modules/DataStream.js/encoding-indexes.js"></script>
+    <script type="text/javascript" src="other_modules/DataStream.js/encoding.js"></script>
+    <script type="text/javascript" src="other_modules/DataStream.js/DataStream.js"></script>
+
+    <script type="text/javascript" src="node_modules/stl-reader/stl-ascii-reader.js"></script>
+    <script type="text/javascript" src="node_modules/stl-reader/stl-binary-reader.js"></script>
+    <script type="text/javascript" src="node_modules/stl-reader/stl-reader.js"></script>
+
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/canvasCtrl.js"></script>
