--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     <script type="text/javascript" src="node_modules/stl-reader/stl-reader.js"></script>
 
     <script type="text/javascript" src="app/app.js"></script>
+
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/canvasCtrl.js"></script>
+
+    <script type="text/javascript" src="app/directives/canvas.js"></script>
+
     <script type="text/javascript" src="app/services/renderer.js"></script>
   </body>
 </html>
