including all the services in the index.html

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     <script type="text/javascript" src="app/directives/canvas.js"></script>
 
     <script type="text/javascript" src="app/services/renderer.js"></script>
+    <script type="text/javascript" src="app/services/model.js"></script>
+    <script type="text/javascript" src="app/services/scene.js"></script>
+    <script type="text/javascript" src="app/services/camera.js"></script>
+
   </body>
 </html>
