--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="node_modules/stl-reader/stl-binary-reader.js"></script>
     <script type="text/javascript" src="node_modules/stl-reader/stl-reader.js"></script>
 
+    <script type="text/javascript" src="node_modules/three/three.js"></script>
+
     <script type="text/javascript" src="app/app.js"></script>
 
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
