replacing the menu function in the main controller with the menu service

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="app/services/model.js"></script>
     <script type="text/javascript" src="app/services/scene.js"></script>
     <script type="text/javascript" src="app/services/camera.js"></script>
+    <script type="text/javascript" src="app/services/menu.js"></script>
 
   </body>
 </html>
