adding a math utility file

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
     <script type="text/javascript" src="app/services/camera.js"></script>
     <script type="text/javascript" src="app/services/menu.js"></script>
 
+    <script type="text/javascript" src="app/utilities/math.js"></script>
+
   </body>
 </html>
