adding a test for the three.js utility script

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="app/services/menu.js"></script>
 
     <script type="text/javascript" src="app/utilities/math.js"></script>
+    <script type="text/javascript" src="app/utilities/three.js"></script>
 
   </body>
 </html>
