fixing the js references in the index html

--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
 
     <script type="text/javascript" src="app/directives/canvas.js"></script>
 
-    <script type="text/javascript" src="app/services/renderer.js"></script>
-    <script type="text/javascript" src="app/services/model.js"></script>
-    <script type="text/javascript" src="app/services/scene.js"></script>
-    <script type="text/javascript" src="app/services/camera.js"></script>
-    <script type="text/javascript" src="app/services/menu.js"></script>
+    <script type="text/javascript" src="app/services/rendering/renderer.js"></script>
+    <script type="text/javascript" src="app/services/rendering/model.js"></script>
+    <script type="text/javascript" src="app/services/rendering/scene.js"></script>
+    <script type="text/javascript" src="app/services/rendering/camera.js"></script>
+    <script type="text/javascript" src="app/services/rendering/lights.js"></script>
+    <script type="text/javascript" src="app/services/rendering/materials.js"></script>
+
+    <script type="text/javascript" src="app/services/ui/menu.js"></script>
+    <script type="text/javascript" src="app/services/ui/fileOpen.js"></script>
 
     <script type="text/javascript" src="app/utilities/math.js"></script>
     <script type="text/javascript" src="app/utilities/three.js"></script>
+    <script type="text/javascript" src="app/utilities/buffer.js"></script>
 
   </body>
 </html>
