adding the mouse and modes services to the index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <script type="text/javascript" src="app/services/rendering/camera.js"></script>
     <script type="text/javascript" src="app/services/rendering/lights.js"></script>
     <script type="text/javascript" src="app/services/rendering/materials.js"></script>
+    <script type="text/javascript" src="app/services/rendering/mouse.js"></script>
+    <script type="text/javascript" src="app/services/rendering/modes.js"></script>
 
     <script type="text/javascript" src="app/services/ui/menu.js"></script>
     <script type="text/javascript" src="app/services/ui/fileOpen.js"></script>
