--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="app/utilities/math.js"></script>
     <script type="text/javascript" src="app/utilities/three.js"></script>
     <script type="text/javascript" src="app/utilities/buffer.js"></script>
+    <script type="text/javascript" src="app/utilities/mousePos.js"></script>
 
   </body>
 </html>
