passing the clicked menu item to the handler so that we can determine what was clicked

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <script type="text/javascript" src="app/services/ui/menu.js"></script>
     <script type="text/javascript" src="app/services/ui/fileOpen.js"></script>
+    <script type="text/javascript" src="app/services/ui/setMode.js"></script>
 
     <script type="text/javascript" src="app/utilities/math.js"></script>
     <script type="text/javascript" src="app/utilities/three.js"></script>
