orienting the camera to isometric when a new file is opened

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="app/services/rendering/materials.js"></script>
     <script type="text/javascript" src="app/services/rendering/mouse.js"></script>
     <script type="text/javascript" src="app/services/rendering/modes.js"></script>
+    <script type="text/javascript" src="app/services/rendering/orient.js"></script>
 
     <script type="text/javascript" src="app/services/ui/menu.js"></script>
     <script type="text/javascript" src="app/services/ui/fileOpen.js"></script>
