--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="app/services/rendering/orient.js"></script>
 
     <script type="text/javascript" src="app/services/ui/menu/menu.js"></script>
+    <script type="text/javascript" src="app/services/ui/menu/viewMenu.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/fileOpen.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/setMode.js"></script>
 
