using the set orientation service in the view menu

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="app/services/ui/menu/viewMenu.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/fileOpen.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/setMode.js"></script>
+    <script type="text/javascript" src="app/services/ui/menu/handlers/setOrientation.js"></script>
 
     <script type="text/javascript" src="app/utilities/math.js"></script>
     <script type="text/javascript" src="app/utilities/three.js"></script>
