including the status controller in the index html and the main window

--- a/app/controllers/mainCtrl.html
+++ b/app/controllers/mainCtrl.html
@@ -1,3 +1,6 @@
 
 <div ng-controller="CanvasCtrl" ng-include="'app/controllers/canvasCtrl.html'">
 </div>
+
+<div ng-controller="StatusCtrl" ng-include="'app/controllers/statusCtrl.html'">
+</div>
