--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/canvasCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/statusCtrl.js"></script>
 
     <script type="text/javascript" src="app/directives/canvas.js"></script>
 
