styling the status bar using place holder data

--- a/app/controllers/statusCtrl.html
+++ b/app/controllers/statusCtrl.html
@@ -1,2 +1,19 @@
 
-<div id='statusBar'></div>
+<div id='statusBar'>
+  <span class='statusItem'>
+    <span class='statusLabel'>
+      Test
+    </span>
+    <span class='statusValue'>
+      Value
+    </span>
+  </span>
+  <span class='statusItem'>
+    <span class='statusLabel'>
+      Test2
+    </span>
+    <span class='statusValue'>
+      Value2
+    </span>
+  </span>
+</div>
