showing the mode in the status bar

--- a/app/controllers/statusCtrl.html
+++ b/app/controllers/statusCtrl.html
@@ -2,10 +2,10 @@
 <div id='statusBar'>
   <span class='statusItem'>
     <span class='statusLabel'>
-      Test
+      Mode
     </span>
     <span class='statusValue'>
-      Value
+      {{ getMode() }}
     </span>
   </span>
   <span class='statusItem'>
