adding orientation mode to the status bar

--- a/app/controllers/statusCtrl.html
+++ b/app/controllers/statusCtrl.html
@@ -10,10 +10,10 @@
   </span>
   <span class='statusItem'>
     <span class='statusLabel'>
-      Test2
+      Orientation
     </span>
     <span class='statusValue'>
-      Value2
+      {{ getOrientation() }}
     </span>
   </span>
 </div>
