adding a status item for the render style

--- a/app/controllers/statusCtrl.html
+++ b/app/controllers/statusCtrl.html
@@ -16,4 +16,12 @@
       {{ getOrientation() }}
     </span>
   </span>
+  <span class='statusItem'>
+    <span class='statusLabel'>
+      Render Style
+    </span>
+    <span class='statusValue'>
+      {{ getRenderStyle() }}
+    </span>
+  </span>
 </div>
