getting rid of the canvas controller

--- a/app/controllers/mainCtrl.html
+++ b/app/controllers/mainCtrl.html
@@ -1,6 +1,5 @@
 
-<div ng-controller="CanvasCtrl" ng-include="'app/controllers/canvasCtrl.html'">
-</div>
+<canvas stl-canvas id='mainCanvas'></canvas>
 
 <div ng-controller="StatusCtrl" ng-include="'app/controllers/statusCtrl.html'">
 </div>
