add watcher for live-reload

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="app/services/ui/menu/menu.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/viewMenu.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/fileOpen.js"></script>
+    <script type="text/javascript" src="app/services/ui/menu/handlers/fileWatch.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/setMode.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/setOrientation.js"></script>
     <script type="text/javascript" src="app/services/ui/menu/handlers/setRenderStyle.js"></script>
